uci-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uci-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uci-service
  template:
    metadata:
      labels:
        app: uci-service
    spec:
      containers:
        - name: uci-service-container
          image: dodiliz/uci-service-app-user5:latest
          ports:
            - containerPort: 8080
