uci-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uci-service-service
spec:
  selector:
    app: uci-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
