uci-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uci-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.nuup.ninja
      http:
        paths:
          - path: /seguimiento
            pathType: Prefix
            backend:
              service:
                name: uci-service-service
                port:
                  number: 80
